# nuclei

./: LICENSE  pyproject.toml
notebooks/: logical_gates.ipynb  mnist.ipynb  next_char.ipynb  random_groups.ipynb  sandbox.ipynb
src/nuclei/: activations.py  anneal.py  base_class.py  losses.py  nucleus.py  optical.py  preprocess.py  viterbi.py
