[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nuclei"
version = "0.0.1"
authors = [
    { name="Alejandro Andrade", email="landrad78@gmail.com" },
]
description = "Nuclei for AI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/laandrad/nuclei"
"Bug Tracker" = "https://github.com/laandrad/nuclei/issues"